--- a/SoccerBets/SoccerBets/SoccerBets.csproj
+++ b/SoccerBets/SoccerBets/SoccerBets.csproj
@@ -46,6 +46,7 @@
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
